@@ -38,29 +38,19 @@ public class UserRepository {
     }
 
     /**
-     * Retrieves all users with their associated student data if applicable
+     * Retrieves all users with their associated student data
      */
     public List<UserWithStudentInfo> retrieveAllUsersWithStudentInfo() throws ExecutionException, InterruptedException {
-        // Get all users
         ApiFuture<QuerySnapshot> usersFuture = firestore.collection("users").get();
         List<QueryDocumentSnapshot> userDocuments = usersFuture.get().getDocuments();
 
-        // Get all students in parallel
         ApiFuture<QuerySnapshot> studentsFuture = firestore.collection("students").get();
         List<QueryDocumentSnapshot> studentDocuments = studentsFuture.get().getDocuments();
 
-        // Create a map of userId to Students for efficient lookup
-        Map<String, Students> studentMap = studentDocuments.stream()
-                .map(doc -> {
-                    Students student = doc.toObject(Students.class);
-                    student.logFields();
-                    return student;
-                })
-                .filter(student -> student.getUserRefId() != null)
-                .collect(Collectors.toMap(
-                        student -> extractUserIdFromPath(student.getUserRefId().getPath()),
-                        student -> student
-                ));
+        Map<String, Students> studentMap = studentDocuments.stream().map(doc -> {Students student = doc.toObject(Students.class);
+            student.logFields();
+            return student;
+        }).filter(student -> student.getUserRefId() != null).collect(Collectors.toMap(student -> extractUserIdFromPath(student.getUserRefId().getPath()), student -> student));
 
         List<UserWithStudentInfo> result = new ArrayList<>();
 
@@ -69,8 +59,7 @@ public class UserRepository {
             Students studentInfo = studentMap.get(user.getUserId());
 
             result.add(new UserWithStudentInfo(user, studentInfo));
-            log.debug("User {} => {} with student info: {}",
-                    userDoc.getId(), user, studentInfo != null);
+            log.debug("User {} => {} with student info: {}", userDoc.getId(), user, studentInfo != null);
         }
 
         log.info("Retrieved {} users with student information", result.size());
@@ -78,16 +67,12 @@ public class UserRepository {
     }
 
     /**
-     * Updates user information with proper transaction handling
+     * Updates user information
      */
-    public UserWithStudentInfo updateUser(String userId, UpdateUserInfoDTO updateDTO)
-            throws ExecutionException, InterruptedException {
-
+    public UserWithStudentInfo updateUser(String userId, UpdateUserInfoDTO updateDTO) throws ExecutionException, InterruptedException {
         DocumentReference userRef = firestore.collection("users").document(userId);
 
-        // Use a transaction to ensure data consistency
         ApiFuture<UserWithStudentInfo> transactionFuture = firestore.runTransaction(transaction -> {
-            // Get user document
             DocumentSnapshot userSnapshot = transaction.get(userRef).get();
             if (!userSnapshot.exists()) {
                 throw new RuntimeException("User not found with ID: " + userId);
@@ -98,35 +83,28 @@ public class UserRepository {
                 throw new RuntimeException("User object could not be parsed for ID: " + userId);
             }
 
-            // Update user fields
             updateUserFields(user, updateDTO);
             transaction.set(userRef, user);
 
             Students studentInfo = null;
 
-            // Handle student-specific updates
             if (user.getUserType() == UserType.STUDENT) {
-                ApiFuture<QuerySnapshot> studentQueryFuture = firestore.collection("students")
-                        .whereEqualTo("userRefId", userRef)
-                        .get();
+                ApiFuture<QuerySnapshot> studentQueryFuture = firestore.collection("students").whereEqualTo("userRefId", userRef).get();
 
                 try {
                     QuerySnapshot studentQuery = studentQueryFuture.get();
                     if (!studentQuery.isEmpty()) {
-                        DocumentSnapshot studentSnapshot = studentQuery.getDocuments().get(0);
+                        DocumentSnapshot studentSnapshot = studentQuery.getDocuments().getFirst();
                         studentInfo = studentSnapshot.toObject(Students.class);
 
-                        if (studentInfo != null) {
-                            updateStudentFields(studentInfo, updateDTO);
+                        updateStudentFields(studentInfo, updateDTO);
 
-                            // Handle course reference update
-                            if (updateDTO.getCourseRefId() != null) {
-                                updateCourseReference(studentInfo, updateDTO.getCourseRefId(), transaction);
-                            }
-
-                            transaction.set(studentSnapshot.getReference(), studentInfo);
-                            log.info("Updated student for user {} with student-specific fields", userId);
+                        if (updateDTO.getCourseRefId() != null) {
+                            updateCourseReference(studentInfo, updateDTO.getCourseRefId(), transaction);
                         }
+
+                        transaction.set(studentSnapshot.getReference(), studentInfo);
+                        log.info("Updated student for user {} with student-specific fields", userId);
                     }
                 } catch (Exception e) {
                     throw new RuntimeException("Failed to update student information", e);
@@ -168,10 +146,8 @@ public class UserRepository {
                 try {
                     QuerySnapshot studentQuery = studentQueryFuture.get();
                     if (!studentQuery.isEmpty()) {
-                        studentInfo = studentQuery.getDocuments().get(0).toObject(Students.class);
-                        if (studentInfo != null) {
-                            studentInfo.logFields();
-                        }
+                        studentInfo = studentQuery.getDocuments().getFirst().toObject(Students.class);
+                        studentInfo.logFields();
                     }
                 } catch (Exception e) {
                     log.warn("Could not retrieve student information for user {}", userId, e);
@@ -192,10 +168,9 @@ public class UserRepository {
         WriteBatch batch = firestore.batch();
         List<UserWithStudentInfo> updatedUsers = new ArrayList<>();
 
-        // Get all users first
         List<DocumentReference> userRefs = userIds.stream()
                 .map(userId -> firestore.collection("users").document(userId))
-                .collect(Collectors.toList());
+                .toList();
 
         for (DocumentReference userRef : userRefs) {
             ApiFuture<DocumentSnapshot> userFuture = userRef.get();
@@ -211,8 +186,6 @@ public class UserRepository {
                 user.setAccountStatus(AccountStatus.INACTIVE);
                 batch.set(userRef, user);
 
-                // Note: We're not including student info in batch operations for simplicity
-                // In a real-world scenario, you might want to fetch student info separately
                 updatedUsers.add(new UserWithStudentInfo(user, null));
                 log.info("Added user {} to batch for deactivation", user.getUserId());
             }
@@ -251,10 +224,8 @@ public class UserRepository {
                 try {
                     QuerySnapshot studentQuery = studentQueryFuture.get();
                     if (!studentQuery.isEmpty()) {
-                        studentInfo = studentQuery.getDocuments().get(0).toObject(Students.class);
-                        if (studentInfo != null) {
-                            studentInfo.logFields();
-                        }
+                        studentInfo = studentQuery.getDocuments().getFirst().toObject(Students.class);
+                        studentInfo.logFields();
                     }
                 } catch (Exception e) {
                     log.warn("Could not retrieve student information for user {}", userId, e);
@@ -274,12 +245,10 @@ public class UserRepository {
 
         Query userQuery = buildUserQuery(searchDTO);
 
-        // Execute user query
         ApiFuture<QuerySnapshot> userQueryFuture = userQuery.get();
         List<QueryDocumentSnapshot> userDocs = userQueryFuture.get().getDocuments();
         log.info("Found {} user documents after initial query", userDocs.size());
 
-        // Get students if we need student-specific filtering
         Map<String, Students> studentMap = null;
         if (needsStudentFiltering(searchDTO)) {
             studentMap = getStudentMap();
@@ -325,8 +294,7 @@ public class UserRepository {
         if (updateDTO.getYearLevel() != null) student.setYearLevel(updateDTO.getYearLevel());
     }
 
-    private void updateCourseReference(Students student, String courseRefId, Transaction transaction)
-            throws ExecutionException, InterruptedException {
+    private void updateCourseReference(Students student, String courseRefId, Transaction transaction) throws ExecutionException, InterruptedException {
         DocumentReference courseRef = firestore.document(courseRefId);
         DocumentSnapshot courseSnapshot = transaction.get(courseRef).get();
 
@@ -339,8 +307,7 @@ public class UserRepository {
 
         if (course != null && course.getClusterRefId() != null) {
             student.setClusterRefId(course.getClusterRefId());
-            log.info("Automatically updated clusterRefId to {} based on course {}",
-                    course.getClusterRefId().getPath(), courseRefId);
+            log.info("Automatically updated clusterRefId to {} based on course {}",course.getClusterRefId().getPath(), courseRefId);
         } else {
             log.warn("Course {} does not have a clusterRefId", courseRefId);
             student.setClusterRefId(null);
@@ -351,22 +318,19 @@ public class UserRepository {
         Query query = firestore.collection("users");
 
         if (searchDTO.getUserType() != null) {
-            query = query.whereEqualTo("userType", searchDTO.getUserType().toString());
-            log.info("Filtering by userType: {}", searchDTO.getUserType());
+            query = query.whereEqualTo("userType",searchDTO.getUserType().toString());
+            log.info("Filtering by userType: {}",searchDTO.getUserType());
         }
         if (searchDTO.getAccountStatus() != null) {
-            query = query.whereEqualTo("accountStatus", searchDTO.getAccountStatus().toString());
-            log.info("Filtering by accountStatus: {}", searchDTO.getAccountStatus());
+            query = query.whereEqualTo("accountStatus",searchDTO.getAccountStatus().toString());
+            log.info("Filtering by accountStatus: {}",searchDTO.getAccountStatus());
         }
 
         return query;
     }
 
     private boolean needsStudentFiltering(UserSearchDTO searchDTO) {
-        return searchDTO.getSection() != null ||
-                searchDTO.getYearLevel() != null ||
-                searchDTO.getCourseRefId() != null ||
-                (searchDTO.getSearchTerm() != null && !searchDTO.getSearchTerm().isEmpty());
+        return searchDTO.getSection() != null || searchDTO.getYearLevel() != null || searchDTO.getCourseRefId() != null || (searchDTO.getSearchTerm() != null && !searchDTO.getSearchTerm().isEmpty());
     }
 
     private Map<String, Students> getStudentMap() throws ExecutionException, InterruptedException {
@@ -377,19 +341,16 @@ public class UserRepository {
                 .filter(student -> student.getUserRefId() != null)
                 .collect(Collectors.toMap(
                         student -> extractUserIdFromPath(student.getUserRefId().getPath()),
-                        student -> student
-                ));
+                        student -> student));
     }
 
     private boolean matchesSearchCriteria(Users user, Students studentInfo, UserSearchDTO searchDTO) {
-        // Text search
         if (searchDTO.getSearchTerm() != null && !searchDTO.getSearchTerm().isEmpty()) {
             String searchTerm = searchDTO.getSearchTerm().toLowerCase();
             boolean textMatch = matchesTextSearch(user, studentInfo, searchTerm);
             if (!textMatch) return false;
         }
 
-        // Student-specific filters
         if (user.getUserType() == UserType.STUDENT && studentInfo != null) {
             if (searchDTO.getSection() != null && !searchDTO.getSection().equals(studentInfo.getSection())) {
                 return false;
@@ -397,11 +358,7 @@ public class UserRepository {
             if (searchDTO.getYearLevel() != null && !searchDTO.getYearLevel().equals(studentInfo.getYearLevel())) {
                 return false;
             }
-            if (searchDTO.getCourseRefId() != null &&
-                    (studentInfo.getCourseRefId() == null ||
-                            !searchDTO.getCourseRefId().equals(studentInfo.getCourseRefId().getPath()))) {
-                return false;
-            }
+            return searchDTO.getCourseRefId() == null || (studentInfo.getCourseRefId() != null && searchDTO.getCourseRefId().equals(studentInfo.getCourseRefId().getPath()));
         }
 
         return true;
@@ -412,20 +369,15 @@ public class UserRepository {
                 (user.getLastName() != null && user.getLastName().toLowerCase().contains(searchTerm)) ||
                 (user.getEmail() != null && user.getEmail().toLowerCase().contains(searchTerm));
 
-        // Check studentNumber for students
         if (!textMatch && user.getUserType() == UserType.STUDENT && studentInfo != null) {
-            textMatch = studentInfo.getStudentNumber() != null &&
-                    studentInfo.getStudentNumber().toLowerCase().contains(searchTerm);
+            textMatch = studentInfo.getStudentNumber() != null && studentInfo.getStudentNumber().toLowerCase().contains(searchTerm);
         }
 
         return textMatch;
     }
 
     private String extractUserIdFromPath(String path) {
-        // Extract userId from path like "/users/{userId}"
         String[] parts = path.split("/");
         return parts.length > 0 ? parts[parts.length - 1] : "";
     }
-
-    // Note: UserWithStudentInfo is now a separate DTO class in the dto package
 }
